<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TweetKar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="textStatusUpdate">Status Update</string>
    <string name="hintStatus">Enter your Status Message</string>
    <string name="buttonTweet">Tweet</string>
    <string name="startService">Start Service</string>
    <string name="stopService">Stop Service</string>
    <string name="refresh">Refresh</string>
    <string name="userName">UserName</string>
    <string name="userNameSummary">Enter your Username</string>
    <string name="password">Password</string>
    <string name="passwordSummary">Enter your Password</string>
    <string name="serverName">Server Name</string>
    <string name="serverSummary"></string>
    <string name="itemPreferences">Preferences</string>
    <string name="fragmentPrefs">Fragment Preference</string>
    <string name="refreshInterval">Refresh Interval</string>
    <string name="refreshIntervalSummary">&quot;Enter Referesh Time(in sec) : Default 10 sec&quot;</string>

    <string-array name="timeoutIntervals">
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
    </string-array>
    
    <string-array name="timeoutIntervalsNames">
        <item>5 s</item>
        <item>10 s</item>
        <item>30 s</item>
        <item>60 s</item>
        <item>5 m</item>
        <item>10 m</item>
    </string-array>

</resources>