<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityStatusUpdate" >

    <EditText
        android:id="@+id/EditTextTweetBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textStatusUpdate"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/hintStatus" />

    <Button
        android:id="@+id/buttonTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textStatusUpdate"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textStatusUpdate"
        android:layout_marginBottom="35dp"
        android:text="@string/buttonTweet"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textStatusUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/textStatusUpdate"
        android:textSize="25dp" />

</RelativeLayout>